#
#  Copyright (C) 2002-2006 Intel Corporation
#  
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#  
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#  
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
#  
#

dnl Process this file with autoconf to produce a configure script.
AC_INIT(admin/packages/feeder)

dnl Installation defaults
dnl AC_PREFIX_DEFAULT(/usr/local)
AC_PREFIX_PROGRAM(asimstarter)

AC_SUBST(package)
package=feeder


dnl Get release tag out of package file.
dnl The tag is assumed to be in a line that looks like: Tag=<tagname>
AC_SUBST(release)
release=`grep '^Tag=' ./admin/packages/$package | sed 's/Tag=//'`


configdir='${sysconfdir}/asim/${release}'
AC_SUBST(configdir)


packagedir='${datadir}/asim'
AC_SUBST(packagedir)


codedir='${packagedir}/${package}/${release}'
AC_SUBST(codedir)



dnl Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_INSTALL

AC_OUTPUT(Makefile)
